chore: productid page fix change variant styles misaligned

--- a/src/components/page-sections/products-page/styles/changevariantbutton.module.css
+++ b/src/components/page-sections/products-page/styles/changevariantbutton.module.css
@@ -13,7 +13,8 @@
     text-align: center;
     width: fit-content;
     margin-left: 1.4rem;
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
+    margin-bottom: 0.5rem;
     font-family: Jost, sans-serif;
 }
 
